@startuml

title __RIGIDBODY's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.CollisionManifold {
            - contactPoints : List<Vector2>
            - depth : float
            - isColliding : boolean
            + CollisionManifold()
            + CollisionManifold()
            + addContactPoint()
            + getContactPoints()
            + getDepth()
            + getNormal()
            + isColliding()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.Collisions {
            {static} + findCollisionFeatures()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.IntersectionDetector2D {
            {static} + AABBAndAABBB()
            {static} + GetIntersectionPoint()
            {static} + GetIntersectionPoints()
            {static} + IsPointInsidePoly()
            {static} + getPointsInColision()
            {static} + getPointsOfIntersectionFront()
            {static} - containsPoint()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.Rigidbody2D {
            - cor : float
            - inverseMass : float
            - linearDamping : float
            - mass : float
            + Rigidbody2D()
            + Rigidbody2D()
            + addForce()
            + clearAccumulators()
            + componentInit()
            + componentRender()
            + componentUpdate()
            + getCor()
            + getForward()
            + getInverseMass()
            + getLinearVelocity()
            + getMass()
            + getRotation()
            + hasInfiniteMass()
            + setCor()
            + setLinearVelocity()
            + setMass()
            + setTransform()
            + setTransform()
        }
      }
    }
  }
  

  com.apetrei.engine.physics.rigidbody.CollisionManifold o-- com.apetrei.misc.Vector2 : normal
  com.apetrei.engine.physics.rigidbody.Rigidbody2D -up-|> com.apetrei.engine.components.TransformComponent
  com.apetrei.engine.physics.rigidbody.Rigidbody2D o-- com.apetrei.misc.Vector2 : forceAccum
  com.apetrei.engine.physics.rigidbody.Rigidbody2D o-- com.apetrei.misc.Vector2 : forward
  com.apetrei.engine.physics.rigidbody.Rigidbody2D o-- com.apetrei.misc.Vector2 : linearVelocity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
